--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<"!DOCTYPE html>
-
+<!DOCTYPE html>
 <html>
 <body>
 
 <h1>Hello World</h1>
-<p>Minha primeira página na internet.</p>
+<p>Minha primeira pagina na internet.</p>
 
 </body>
-</html> 
+</html>
